# PyCommands

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  setup.py
PyCommandsTool/: PyCommandsTool.py
src/PyCommandsTool/: PyCommandsTool.py  __init__.py  lexer.py  parser.py  pycommandstool.py  test_lexer.py  test_parser.py
