[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycommands_tool_HAVEN_SELPH"
version = "2.0.1"
authors = [
  { name="Haven Selph", email="havenselph@gmail.com" },
]
description = "A simple and easy-to-use module that streamlines the whole user-input side of your script."
readme = { file="README.md" }
license = { file="LICENSE.md"}
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"