[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyCommandsTool"
version = "2.0.2"
authors = [
  { name="Haven Selph", email="havenselph@gmail.com" },
]
description = "A simple and easy-to-use module that streamlines the whole user-input side of your script."
readme = "README.md"
license = { file="LICENSE.md"}
requires-python = ">=3.5"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/HavenSelph/PyCommands"
"Issues" = "https://github.com/HavenSelph/PyCommands/issues"